--- a/community/Makefile
+++ b/community/Makefile
@@ -1,8 +1,8 @@
 .PHONY: community.wasm
 
 src = $(wildcard *.cpp)
-obj = $(src:.cpp=.wasm) 
-OPTS = -D'__TOKEN_ACCOUNT__=cambiatus.tk' -D'__BACKEND_ACCOUNT__=bespiral'
+obj = $(src:.cpp=.wasm)
+OPTS = -D'__TOKEN_ACCOUNT__=test1.tk' -D'__BACKEND_ACCOUNT__=bespiral'
 
 community.wasm: $(src)
 	eosio-cpp $(OPTS) -o $@ -abigen -R ./ricardian $^
